--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 GOOGLE_ID="334356253518-fmeg967hcqihprb4digu04mv8un89dsp.apps.googleusercontent.com"
 GOOGLE_SECRET="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"
-MONGODB_URI="mongodb+srv://ecommerce:ecommerce123@cluster0.jcpgskc.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URI="mongodb+srv://next-ecommerce:123ecommerce@cluster0.9l2litw.mongodb.net/?retryWrites=true&w=majority"
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=secret
