--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "mongodb": "^5.5.0",
+    "mongoose": "^7.2.0",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
