--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ GOOGLE_SECRET="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"
 MONGODB_URI="mongodb+srv://next-ecommerce:123ecommerce@cluster0.9l2litw.mongodb.net/?retryWrites=true&w=majority"
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=secret
+S3_ACCESS_KEY='AKIAQKPWVP5OQHKFXNVR'
+S3_SECRET_ACCESS_KEY="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"
