--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.350.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
@@ -16,15 +17,23 @@
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "form-data": "^4.0.0",
+    "formidable": "^3.2.5",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
+    "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
+    "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.6",
+    "@types/multer": "^1.4.7",
+    "@types/multiparty": "^0.0.33",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
