--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.350.0",
+    "@aws-sdk/signature-v4-crt": "^3.347.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "aws-crt": "^1.15.18",
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
@@ -28,6 +30,7 @@
     "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "typescript": "5.0.4"
   },
   "devDependencies": {
