--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "eslint-config-next": "13.4.2",
     "form-data": "^4.0.0",
     "formidable": "^3.2.5",
+    "mime-types": "^2.1.35",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
-    "next": "13.4.2",
+    "next": "^13.4.6",
     "next-auth": "^4.22.1",
     "next-connect": "^1.0.0",
+    "next-images": "^1.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@types/formidable": "^2.0.6",
+    "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
     "@types/multiparty": "^0.0.33",
     "autoprefixer": "^10.4.14",
