--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
+    "sweetalert2": "^11.7.12",
+    "sweetalert2-react-content": "^5.0.7",
     "typescript": "5.0.4"
   },
   "devDependencies": {
